<resources>
    <string name="app_name">LéKubKiTomb</string>
    <string name="LeaderboardButtonText">Leaderboard</string>
    <string name="PlayButtonText">Play</string>
    <string name="OptionsButtonText">Options</string>
    <string name="BackToMenuButtonText">Retour au menu</string>
    <string name="score">LeScore</string>
    <string name="score_title">Score</string>
    <string name="best_score">Le Best Score</string>
    <string name="best_score_title">Best Score</string>
    <string name="pause_title">Pause</string>
    <string name="PauseText">Pause</string>
    <string name="ContinueButtonText">Continuer</string>
    <string name="BackToMenuPauseButtonText">Retour au menu</string>
    <string name="ConfirmationOuiButtonText">Oui</string>
    <string name="ConfirmationNonButtonText">Non</string>
    <string name="ConfirmationText">La partie ne sera pas sauvegardée, voulez-vous vraiment quitter ?</string>
    <string name="DiffFacile">Facile</string>
    <string name="DiffNormale">Normal</string>
    <string name="DiffDifficile">Difficile</string>
    <string name="DiffExtreme">Extrême</string>
    <string name="PlayAgainText">Rejouer</string>
    <string name="GameOverText">Vous avez perdu, voulez-vous rejouer ?</string>
</resources>